Fixed horizontal spacing of photo information icon

--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,7 @@
   opacity: 60%;
   position: absolute;
   bottom: 10px;
-  right: 1%;
+  right: 20px;
 }
 
 .badge {
